tests/baselines/reference/parserES5ForOfStatement18(strict=true).errors.txt
parserES5ForOfStatement18.ts(1,10): error TS7022: 'of' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== parserES5ForOfStatement18.ts (1 errors) ====
    for (var of of of) { }
             ~~
!!! error TS7022: 'of' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.